--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                  <a class="nav-link p-0" href="#Portfolio">Portfolio</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link p-0" href="#testimonials">Testimonials</a>
+                                 <a class="nav-link p-0" href="#testimonials">Education</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link p-0" href="#blog">Blog</a>
@@ -536,8 +536,8 @@
          <div class="container">
             <div class="blog-inner-con position-relative">
                <div class="generic-title text-center">
-                  <h6>Latest News</h6>
-                  <h2 class="mb-0">Blog & Articles</h2>
+                  <h6>Blog</h6>
+                  <h2 class="mb-0">Case studies & Articles</h2>
                </div>
                <div class="blog-box wow fadeInUp" >
                   <div class="row">
